# dropin.bot

./: .gitignore  be_architecture.md
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  index.css
app/src/context/: AuthContext.tsx  StoreContext.tsx  ThemeContext.tsx  WorkspaceContext.tsx
app/src/data/: index.ts
app/src/hooks/: useOpenClawConnection.ts
app/src/lib/: deviceIdentity.ts  gatewayProtocol.ts
app/src/pages/: AgentConfigPage.tsx  AgentsPage.tsx  AppsPage.tsx  ChannelsPage.tsx  DashboardPage.tsx  FilesPage.tsx  ForgotPasswordPage.tsx  KnowledgeBasesPage.tsx  LoginPage.tsx  PolicyPage.tsx  SettingsPage.tsx  (+7 more)
hub_server/: Cargo.toml
hub_server/src/: main.rs
hub_server/src/modules/: hello.rs
landing/: index.html  package-lock.json  package.json  tailwind.config.cjs
landing/src/: App.tsx  index.css
workspace_server/: .env.example  Dockerfile  pyproject.toml
workspace_server/app/: config.py  db.py  hub_client.py  main.py
workspace_server/app/agents/: models.py  orchestrator.py  router.py  sandbox.py
workspace_server/app/channels/: models.py  router.py  service.py
workspace_server/app/channels/adapters/: base.py  discord.py  slack.py  telegram.py  whatsapp.py
workspace_server/app/dashboard/: router.py
workspace_server/app/files/: router.py  storage.py
workspace_server/app/gateway/: protocol.py  router.py  session.py
workspace_server/app/knowledge/: router.py
workspace_server/app/mcp/: router.py
workspace_server/app/teams/: router.py
workspace_server/app/tools/: router.py
workspace_server/tests/: conftest.py  test_agents.py  test_channels.py  test_db.py  test_files.py  test_gateway.py
(+6 files in other folders)
