[package]
name = "hub_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
diesel = { version = "2.2.0", features = ["postgres"] }

axum = { version="0.8.9", features=["default"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
serde = { version="1.0.228", features=["default","derive"] }
tokio = { version="1.52.3", features=["macros", "rt-multi-thread"] } 
tracing = "0.1.44"
tracing-subscriber = { version="0.3.23", features=["env-filter"]}
