[project]
name = "workspace-server"
version = "0.1.0"
description = "dropin.bot workspace server — per-workspace container"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ecdsa>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiohttp>=3.10.0",
    "websockets>=13.0",
    "slack-bolt>=1.21.0",
    "discord.py>=2.4.0",
    "python-telegram-bot>=21.5",
    "httpx>=0.27.0",
    "cryptography>=43.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx-ws>=0.6.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
